Fix text-align menu header

--- a/src/app/playlists/playlist-header/playlist-header.component.scss
+++ b/src/app/playlists/playlist-header/playlist-header.component.scss
@@ -7,7 +7,7 @@
   //border-bottom-left-radius: 2em;
   //border-bottom-right-radius: 2em;
   //box-shadow: 0px 1px 14px 0px black;
-  padding: 1em;
+  padding: 1em 0.6em 1em 1em;
 }
 
 .playlist-img {
@@ -38,4 +38,8 @@
 
 #playlist-name {
   font-size: 1.3em;
+}
+
+::ng-deep .ui-menu {
+  text-align: left;
 }
